--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <p class="actionCheck"></p>
                     <p class="actionResult"></p> -->
                 </div>
-                
+                <small class="diceRoll"></small>
                 <div class="inputNbutton">
                     <input type="text" class="playerAction">
                     <button class="playerDecision"><i class="fa-solid fa-scroll"></i> ACTION</button>
