--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               </h2>
               <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
                 <div class="accordion-body">
-                  <strong>This is an old school text adventure game.</strong> In order to play, type in text commands according to the questions and click the "ACTION" button to proceed within the story. 
+                  <strong>This is an old school text adventure game.</strong> In order to play, type in text commands according to the questions and click the "ACTION" button or Enter key to proceed within the story. 
                 </div>
               </div>
             </div>
