--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 <body>
     
-    <div class="container m-0">
-        <div class="accordion m-5" id="accordionPanelsStayOpenExample">
+    <div class="container">
+        <div class="accordion" id="accordionPanelsStayOpenExample">
             <div class="accordion-item text-bg-dark">
               <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                 <button class="accordion-button text-bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
