intro sequence added

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             </div>
           </div>
             <div class="mainTextbox container-fluid">
+              <div class="introText"></div>
+              <button id="startButton" class="btn btn-dark" style="display:none;">Start Game</button>
                 <h2 class="currentLocation"></h2>
                 <div class="actionText">
                 <ul>
@@ -58,7 +60,7 @@
                 <small class="diceRoll"></small>
                 <div class="inputNbutton">
                     <input type="text" class="playerAction">
-                    <button class="playerDecision"><i class="fa-solid fa-scroll"></i> ACTION</button>
+                    <button id="playerDecisionButton" class="playerDecision"><i class="fa-solid fa-scroll"></i> ACTION</button>
                 </div>
                 
             </div>
