character class selection added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
           </div>
             <div class="mainTextbox container-fluid">
               <div class="introText"></div>
+              <div id="character-selection" style="display:none;">
+                <h2>Select Your Character Class</h2>
+                <label>
+                    <input type="radio" name="character" value="fighter" checked> Fighter
+                </label>
+                <label>
+                    <input type="radio" name="character" value="wizard"> Wizard
+                </label>
+                <label>
+                    <input type="radio" name="character" value="ranger"> Ranger
+                </label>
+            </div>
               <button id="startButton" class="btn btn-dark" style="display:none;">Start Game</button>
                 <h2 class="currentLocation"></h2>
                 <div class="actionText">
