--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
               <div class="introText"></div>
               <div id="character-selection" style="display:none;">
                 <h2>Select Your Character Class</h2>
-                <label>
-                    <input type="radio" name="character" value="fighter" checked> Fighter
+                <label for="fighter">
+                    <input type="radio" id="fighter" name="character" value="fighter" checked> Fighter
                 </label>
-                <label>
-                    <input type="radio" name="character" value="wizard"> Wizard
+                <label for="wizard">
+                    <input type="radio" id="wizard" name="character" value="wizard"> Wizard
                 </label>
-                <label>
-                    <input type="radio" name="character" value="ranger"> Ranger
+                <label for="ranger">
+                    <input type="radio" id="ranger" name="character" value="ranger"> Ranger
                 </label>
             </div>
               <button id="startButton" class="btn btn-dark" style="display:none;">Start Game</button>
