minor text changes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="mainTextbox container-fluid">
               <div class="introText"></div>
               <div id="character-selection" style="display:none;">
-                <h2>Select Your Character Class</h2>
+                <h2>Pick your Character Class</h2>
                 <label for="fighter">
                     <input type="radio" id="fighter" name="character" value="fighter" checked> Fighter
                 </label>
