gameOver counter visualized on the dom

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <input type="text" class="playerAction">
                     <button id="playerDecisionButton" class="playerDecision"><i class="fa-solid fa-scroll"></i> ACTION</button>
                 </div>
-                
+                <small class="gameOver"></small>
             </div>
         </div>
     </div>
