--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </h2>
               <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse text-bg-dark" aria-labelledby="panelsStayOpen-headingTwo">
                 <div class="accordion-body">
-                  <strong>This is a work in progress.</strong> It is meant as a practice for creating game logic and getting better at programming. The game is slowly being built and features are added as time goes on.
+                  <strong>This is a work in progress.</strong> Certain classes are better at some tasks and worse at others. Try to test them all out. If you make more than 2 mistakes, you lose. Good luck.
                 </div>
               </div>
             </div>
