--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <label for="fighter">
                     <input type="radio" id="fighter" name="character" value="fighter" checked> Fighter
                 </label>
-                <span style="font-size: small;">Strong with close combat fighting, can use a variety of weapons</span>
+                <span style="font-size: small;">Master of close combat, can use a variety of weapons</span>
                 </div>
                 <div class="characterbox">
                   <label for="wizard">
